...
        android:background="@drawable/chatbox2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="Typing..."
            android:textColor="@color/white"
            android:textColorHint="#CACACA"
            android:background="@android:color/transparent"
            android:paddingStart="16dp"

            />

        <ImageView
            android:id="@+id/btnSend_vanish"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/send_msg_2"
            android:padding="8dp"

            />
...
