...
        android:background="@android:color/white"
        android:drawableEnd="@drawable/search_123"
        android:hint="Search for DMs"
        android:padding="12dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_Dms"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
...
